styles/selection.css
html, body {
    width: 100%;
    height: 100%;
    overflow: hidden;
    display: flex;
    flex-flow: column;
    margin: 0;
    padding: 0;
}

#body {
    flex-grow: 1;
    overflow: hidden;
    display: flex;
    flex-flow: row;
}

#preview {
    padding: 8px;
    text-align: center;
    vertical-align: middle;
    flex-grow: 1;
    overflow-y: scroll;
}

#option_list {
    width: 299px; /* 300 - 1 */
    overflow-y: scroll;
    overflow-x: hidden;
    scrollbar-width: none;
    border-style: solid;
    border-color: rgb(224, 224, 224);
    border-width: 0 1px 0 0;
    margin: 0;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

#results_tab th, td {
    padding: 8px;
}
  
#results_tab tr:nth-child(even) {
    background-color: #f2f2f2;
}

.pit_option {
    overflow: hidden;
    clear: both;
    font-size: 16px;
    font-family: "DejaVu Serif";
    border-style: solid;
    border-color: rgb(224, 224, 224);
    border-width: 0 0 1px 0;
    padding: 16px;
    background-color: white;
}

.match_option {
    margin-bottom: 0;
    overflow: hidden;
    clear: both;
    font-size: 16px;
    font-family: "DejaVu Serif";
    border-style: solid;
    border-color: rgb(224, 224, 224);
    border-width: 0 0 1px 0;
    padding: 16px;
    background-color: white;
}

.match_option > *, .pit_option > * {
    text-align: center;
    display: inline-block;
    vertical-align: middle;
    padding: 0 auto 0;
}

.option_number {
    font-size: 200%;
    width: 70px;
    text-align: center;
    padding: 0 auto 0;
}

.long_option_number {
    font-size: 200%;
    text-align: center;
    padding: 0 auto 0;
}

.alliance {
    width: 170px;
}

.blue {
    color: blue;
}

.red {
    color: red;
}

.scouted {
    background-color: gray;
    color: white;
}

.selected {
    background-color: dodgerblue;
    color: white;
}

.result_cell {
    max-width: 250px;
    table-layout: fixed;
}

#result_title {
    text-align: center;
}

#avatar {
    display: inline-block;
    height: 50px;
    width: 50px;
}

.result_name {
    display: inline-block;
    vertical-align: top;
    line-height: 50px;
    margin: 0;
}

#whiteboard {
    background-size: 100% 100%; 
}

.pick_list {
    display: inline-block;
    width: 300px;
    vertical-align: top;
}

